Ryou: Songs now jump to the time when clicked on lyric line (editor only). Also, YouTube widget bugfix.

--- a/files/ryou/right.css
+++ b/files/ryou/right.css
@@ -23,9 +23,10 @@
 	opacity: 1;
 	font-weight: bold;
 }
-.widget_lyric[data-theme="right"] audio{
+.widget_lyric[data-theme="right"] audio, .widget_lyric[data-theme="right"] iframe{
 	display: block;
 	float: left;
+	max-width: 300px;
 }
 .widget_lyric[data-theme="right"]:after{
 	clear: both;
